overlay/ig/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ig
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ig
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
      labels:
        app: ig
    spec:
      containers:
      - name: ig
        image: ig
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /kube/liveness
            port: 8080
          periodSeconds: 30
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /kube/readiness
            port: 8080
          initialDelaySeconds: 5
        ports:
        - containerPort: 8080   
        resources:
          requests:
            cpu: 200m
            memory: 512Mi
