overlay/ig/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "true"
    nginx.ingress.kubernetes.io/auth-tls-secret: sbat/obri-ca
    nginx.ingress.kubernetes.io/auth-tls-verify-client: optional_no_ca
    nginx.ingress.kubernetes.io/http2-max-field-size: 16k
    nginx.ingress.kubernetes.io/http2-max-header-size: 128k
    nginx.ingress.kubernetes.io/proxy-body-size: 64m
    nginx.ingress.kubernetes.io/proxy-buffer-size: 128k
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/proxy-buffers: 4 256k
    nginx.ingress.kubernetes.io/proxy-busy-buffers_size: 256k
    nginx.ingress.kubernetes.io/error-log-level: "debug"
  name: forgerock
spec:
  rules:
  - host: tpp.sbat.demo
    http:
      paths:
      - backend:
          service:
            name: ig
            port: 
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - tpp.sbat.demo
    secretName: server.tls
